# cpp_ssl_chat

./: .clang-format  .gitignore  CMakeLists.txt  README.md  cert.pem  client_main.cpp  experiment.code-workspace  gen_certs.sh  server_main.cpp
SslChat/: CMakeLists.txt
SslChat/Cli/: CMakeLists.txt  cliLoop.cpp  cliLoop.hpp
SslChat/Client/: CMakeLists.txt  client_main.cpp  constants.hpp  handleMessages.cpp  handleMessages.hpp  openConnection.cpp  openConnection.hpp  readMessages.cpp  readMessages.hpp  run.cpp  run.hpp  ssl.cpp  ssl.hpp  types.hpp
SslChat/Logging/: CMakeLists.txt  logging.cpp  logging.hpp
SslChat/Logging/Private/: CMakeLists.txt  helpers.cpp  helpers.hpp
SslChat/Server/: CMakeLists.txt  client.cpp  client.hpp  handleNewConnection.cpp  handleNewConnection.hpp  initServer.cpp  initServer.hpp  processCliThread.cpp  processCliThread.hpp  processClients.cpp  processClients.hpp  resetFd.cpp  resetFd.hpp  run.cpp  run.hpp  safe_queue.hpp  server_main.cpp  ssl.cpp  ssl.hpp
SslChat/Ssl/: CMakeLists.txt  ssl.cpp  ssl.hpp  types.hpp
